# rpg_novel_game

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/rpg_game/: llm_config.py  main.py
src/rpg_game/crews/game_crew/: game_crew.py
src/rpg_game/crews/game_crew/config/: agents.yaml  tasks.yaml  tools.py
src/rpg_game/crews/item_crew/: item_crew.py
src/rpg_game/crews/item_crew/config/: agents.yaml  tasks.yaml  tools.py
src/rpg_game/crews/theme_crew/: theme_crew.py
src/rpg_game/crews/theme_crew/config/: agents.yaml  tasks.yaml  tools.py
