[project]
name = "rpg_game"
version = "0.1.0"
description = "rpg_game using crewAI"
authors = [{ name = "Harry", email = "haochengx@outlook.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
]

[project.scripts]
kickoff = "rpg_game.main:kickoff"
plot = "rpg_game.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
